feat(compilation): removed useless code that didn't work anyway